--- a/index.html
+++ b/index.html
@@ -166,10 +166,24 @@
     <!-- END: home-coaching section -->
 
     <!-- Parralex quote section -->
-    <section class="quote-parallax-container">
+    <!-- <section class="quote-parallax-container">
         <div class="parallax-container" >
             <img src="static/img/Mhairi_pics/chair-circus-lane-comp.jpg" class="rellax" data-rellax-zindex="-1" data-rellax-percentage=".7" alt="mhairi-life-coach-on-chair">
         </div>
+        <div class="quote">
+            <h3 class="sect-subtitle">
+                Words I live by
+            </h3>
+            <p class="quote-text">
+                “THE KEY TO SUCCESS IS TO START BEFORE YOU ARE READY”
+            </p>
+        </div>
+    </section> -->
+    <!-- END: parralex quote section -->
+
+    <!-- Parralex quote section -->
+    <section class="quote-parallax-container">
+        <div class="parallax-container"></div>
         <div class="quote">
             <h3 class="sect-subtitle">
                 Words I live by
@@ -232,10 +246,25 @@
     <!-- END: quiz section -->
 
     <!-- Parralex services section -->
-    <section class="services-cta">
+    <!-- <section class="services-cta">
         <div class="parallax-container" >
             <img src="static/img/Mhairi_pics/patio_sitting_comp.jpg" class="rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="mhairi-life-coach-in-patio">
         </div>
+        <div class="services-cta-content">
+            <h2 class="cta-title">
+                Get ready to start living
+            </h2>
+            <h3 class="cta-subtitle">
+                The life of your dreams.
+            </h3>
+            <a class="btn-dark-pink services-cta-btn" href="https://app.acuityscheduling.com/schedule.php?owner=19489834&appointmentType=17193339" target="_blank">Book in your free clarity call</a>
+        </div>
+    </section> -->
+    <!-- END: parralex services section -->
+
+    <!-- Parralex services section -->
+    <section class="services-cta">
+        <div class="parallax-container"></div>
         <div class="services-cta-content">
             <h2 class="cta-title">
                 Get ready to start living
